--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                     </ul>
                     <h4 class="font-bold text-xl mb-4 font-heading">Follow Us</h4>
                     <div class="flex space-x-4">
-                        <a href="https://x.com/NigeriaInPrague" class="text-white hover:opacity-80 transition-opacity"><i class="fab fa-x-twitter text-2xl"></i></a>
+                        <a href="https://x.com/NigeriaInPrague" class="text-white hover:opacity-80 transition-opacity"><i class="fa-brands fa-x-twitter text-2xl"></i></a>
                         <a href="https://facebook.com/NigeriaInPrague" class="text-white hover:opacity-80 transition-opacity"><i class="fab fa-facebook-f text-2xl"></i></a>
                         <a href="https://instagram.com/NigeriaInPrague" class="text-white hover:opacity-80 transition-opacity"><i class="fab fa-instagram text-2xl"></i></a>
                     </div>
