--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         </div>
     </main>
     
-     <!-- Footer -->
+    <!-- Footer -->
     <footer id="contact" class="nigeria-green-bg text-white pt-20 pb-10">
         <div class="container mx-auto px-6">
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
@@ -281,7 +281,7 @@
                     </ul>
                     <h4 class="font-bold text-xl mb-4 font-heading">Follow Us</h4>
                     <div class="flex space-x-4">
-                        <a href="https://x.com/NigeriaInPrague" class="text-white hover:opacity-80 transition-opacity"><i class="fa-brands fa-x-twitter text-2xl"></i></a>
+                        <a href="https://x.com/NigeriaInPrague" class="text-white hover:opacity-80 transition-opacity"><i class="fab fa-twitter text-2xl"></i></a>
                         <a href="https://facebook.com/NigeriaInPrague" class="text-white hover:opacity-80 transition-opacity"><i class="fab fa-facebook-f text-2xl"></i></a>
                         <a href="https://instagram.com/NigeriaInPrague" class="text-white hover:opacity-80 transition-opacity"><i class="fab fa-instagram text-2xl"></i></a>
                     </div>
