--- a/index.html
+++ b/index.html
@@ -86,6 +86,31 @@
             transform: translateY(-8px) perspective(1000px) rotateY(-3deg);
             box-shadow: 0 25px 40px -15px rgba(0,0,0,0.2);
         }
+         .translate-button {
+            position: fixed;
+            top: 180px; /* Positioned below the flag */
+            right: 20px;
+            z-index: 1000;
+            background-color: white;
+            color: #333;
+            padding: 10px 15px;
+            border-radius: 50px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+            display: flex;
+            align-items: center;
+            text-decoration: none;
+            font-size: 14px;
+            font-weight: 600;
+            transition: transform 0.3s ease;
+        }
+        .translate-button:hover {
+            transform: scale(1.05);
+        }
+        .translate-button img {
+            width: 24px;
+            height: 24px;
+            margin-right: 8px;
+        }
     </style>
 </head>
 <body class="bg-gray-100">
