--- a/index.html
+++ b/index.html
@@ -119,6 +119,11 @@
     <a href="nigeria-symbols.html" class="floating-flag">
         <img src="images/nigerian-flag.gif" alt="Nigerian Flag" class="h-20 w-auto rounded-md shadow-lg">
     </a>
+    <!-- Translate Button -->
+    <a href="#" id="translate-link" class="translate-button" title="Translate to Czech">
+        <img src="https://flagcdn.com/w40/cz.png" alt="Czech Flag">
+        <span>Česky</span>
+    </a>
 
     <!-- Header -->
     <header class="bg-white shadow-md sticky top-0 w-full z-10">
