--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Embassy of the Federal Republic of Nigeria, Prague</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Playfair+Display:wght@700;800&display=swap" rel="stylesheet">
@@ -86,7 +86,7 @@
             transform: translateY(-8px) perspective(1000px) rotateY(-3deg);
             box-shadow: 0 25px 40px -15px rgba(0,0,0,0.2);
         }
-         .translate-button {
+        .translate-button {
             position: fixed;
             top: 180px; /* Positioned below the flag */
             right: 20px;
@@ -119,11 +119,13 @@
     <a href="nigeria-symbols.html" class="floating-flag">
         <img src="images/nigerian-flag.gif" alt="Nigerian Flag" class="h-20 w-auto rounded-md shadow-lg">
     </a>
+    
     <!-- Translate Button -->
     <a href="#" id="translate-link" class="translate-button" title="Translate to Czech">
         <img src="https://flagcdn.com/w40/cz.png" alt="Czech Flag">
         <span>Česky</span>
     </a>
+
 
     <!-- Header -->
     <header class="bg-white shadow-md sticky top-0 w-full z-10">
@@ -174,7 +176,7 @@
                         <a href="gallery.html">Photo Gallery</a>
                     </div>
                 </div>
-                <a href="#contact" class="text-gray-600 hover:nigeria-green">Contact Us</a>
+                <a href="contact.html" class="text-gray-600 hover:nigeria-green">Contact Us</a>
             </div>
             <div class="hidden lg:flex items-center text-sm text-gray-500">
                 <i class="fas fa-clock mr-2"></i>
@@ -194,7 +196,7 @@
         <section class="hero-section relative h-[60vh] text-white flex items-center justify-center text-center">
             <div class="hero-slide active" style="background-image: url('images/hero-background-1.jpg');"></div>
             <div class="hero-slide" style="background-image: url('images/hero-background-2.jpg');"></div>
-            <div class="hero-slide" style="background-image: url('images/hero-background-3.png');"></div>
+            <div class="hero-slide" style="background-image: url('images/hero-background-3.jpg');"></div>
             <div class="hero-overlay absolute inset-0"></div>
             <div class="relative z-10 px-6">
                 <h2 class="text-4xl md:text-6xl font-extrabold leading-tight font-heading">Welcome to the Embassy of the<br>Federal Republic of Nigeria</h2>
@@ -208,9 +210,9 @@
                  <div class="container mx-auto px-6">
                     <div class="bg-white p-12 rounded-lg shadow-lg card-3d-effect">
                         <div class="flex flex-wrap items-center">
-                            <div class="w-full md:w-1/3 text-center mb-8 md:mb-0"><img src="images/charge-daffairs.jpg" alt="Ambassador Photo" class="rounded-lg shadow-xl mx-auto w-full max-w-xs object-cover aspect-[3/4]"></div>
+                            <div class="w-full md:w-1/3 text-center mb-8 md:mb-0"><img src="images/ambassador.jpg" alt="Ambassador Photo" class="rounded-lg shadow-xl mx-auto w-full max-w-xs object-cover aspect-[3/4]"></div>
                             <div class="w-full md:w-2/3 md:pl-12">
-                                <h2 class="text-3xl md:text-4xl font-bold section-title inline-block mb-6 relative pb-2 font-heading">A Message from the CDA</h2>
+                                <h2 class="text-3xl md:text-4xl font-bold section-title inline-block mb-6 relative pb-2 font-heading">A Message from the Ambassador</h2>
                                 <p class="text-gray-600 mb-4">On behalf of the President of the Federal Republic of Nigeria, I extend a warm welcome to our official website. We are dedicated to fostering strong diplomatic ties and providing excellent consular services.</p>
                                 <a href="ambassador.html" class="nigeria-green font-semibold hover:underline">Read the full message <i class="fas fa-arrow-right ml-1"></i></a>
                             </div>
@@ -274,9 +276,9 @@
                 <div class="container mx-auto px-6">
                     <h2 class="text-3xl md:text-4xl font-bold section-title inline-block mb-12 relative pb-2 text-center w-full font-heading">Latest News & Events</h2>
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                        <div class="bg-white rounded-lg shadow-md overflow-hidden card-3d-effect"><img src="images/news-event1.png" alt="Community event" class="w-full h-48 object-cover"><div class="p-6"><span class="text-xs text-gray-500">September 1, 2025</span><h4 class="font-bold text-lg my-2 font-heading">Embassy Celebrates Nigerian Independence Day</h4><p class="text-gray-600 text-sm mb-4">Details of the upcoming flag-raising ceremony and cultural reception to mark Nigeria's Independence Day anniversary...</p><a href="news.html" class="nigeria-green font-semibold text-sm">Read More <i class="fas fa-arrow-right ml-1"></i></a></div></div>
-                        <div class="bg-white rounded-lg shadow-md overflow-hidden card-3d-effect"><img src="images/news-event2.png" alt="Online booking system" class="w-full h-48 object-cover"><div class="p-6"><span class="text-xs text-gray-500">August 25, 2025</span><h4 class="font-bold text-lg my-2 font-heading">New Consular Appointment System Launched</h4><p class="text-gray-600 text-sm mb-4">The Embassy has launched a new online appointment booking system for all consular services to improve efficiency...</p><a href="news.html" class="nigeria-green font-semibold text-sm">Read More <i class="fas fa-arrow-right ml-1"></i></a></div></div>
-                        <div class="bg-white rounded-lg shadow-md overflow-hidden card-3d-effect"><img src="images/news-event3.png" alt="Business forum" class="w-full h-48 object-cover"><div class="p-6"><span class="text-xs text-gray-500">August 15, 2025</span><h4 class="font-bold text-lg my-2 font-heading">Nigeria-Czech Business Forum Announced</h4><p class="text-gray-600 text-sm mb-4">The upcoming forum will aim to boost trade and investment between Nigeria and the Czech Republic...</p><a href="news.html" class="nigeria-green font-semibold text-sm">Read More <i class="fas fa-arrow-right ml-1"></i></a></div></div>
+                        <div class="bg-white rounded-lg shadow-md overflow-hidden card-3d-effect"><img src="images/news-event1.jpg" alt="Community event" class="w-full h-48 object-cover"><div class="p-6"><span class="text-xs text-gray-500">September 1, 2025</span><h4 class="font-bold text-lg my-2 font-heading">Embassy Celebrates Nigerian Independence Day</h4><p class="text-gray-600 text-sm mb-4">Details of the upcoming flag-raising ceremony and cultural reception to mark Nigeria's Independence Day anniversary...</p><a href="news.html" class="nigeria-green font-semibold text-sm">Read More <i class="fas fa-arrow-right ml-1"></i></a></div></div>
+                        <div class="bg-white rounded-lg shadow-md overflow-hidden card-3d-effect"><img src="images/news-event2.jpg" alt="Online booking system" class="w-full h-48 object-cover"><div class="p-6"><span class="text-xs text-gray-500">August 25, 2025</span><h4 class="font-bold text-lg my-2 font-heading">New Consular Appointment System Launched</h4><p class="text-gray-600 text-sm mb-4">The Embassy has launched a new online appointment booking system for all consular services to improve efficiency...</p><a href="news.html" class="nigeria-green font-semibold text-sm">Read More <i class="fas fa-arrow-right ml-1"></i></a></div></div>
+                        <div class="bg-white rounded-lg shadow-md overflow-hidden card-3d-effect"><img src="images/news-event3.jpg" alt="Business forum" class="w-full h-48 object-cover"><div class="p-6"><span class="text-xs text-gray-500">August 15, 2025</span><h4 class="font-bold text-lg my-2 font-heading">Nigeria-Czech Business Forum Announced</h4><p class="text-gray-600 text-sm mb-4">The upcoming forum will aim to boost trade and investment between Nigeria and the Czech Republic...</p><a href="news.html" class="nigeria-green font-semibold text-sm">Read More <i class="fas fa-arrow-right ml-1"></i></a></div></div>
                     </div>
                 </div>
             </section>
@@ -289,7 +291,7 @@
                         <div class="text-left"><h3 class="text-2xl font-bold mb-4 font-heading">The Giant of Africa</h3><p class="text-gray-600 mb-4">Explore the rich history, diverse culture, and vast economic potential of Nigeria. From the bustling markets of Lagos to the serene landscapes of the countryside, Nigeria is a country of vibrant energy and warm hospitality. Learn more about our people, our heritage, and the opportunities that await.</p><a href="nigeria-history.html" class="nigeria-green-bg text-white font-bold py-3 px-6 rounded-full hover:opacity-90 transition duration-300">Learn More About Nigeria</a></div>
                         <div class="grid grid-cols-2 gap-4">
                             <img src="images/zuma-rock.jpg" alt="Zuma Rock" class="rounded-lg shadow-md w-full h-full object-cover">
-                            <img src="images/nigerian-culture.png" alt="Nigerian Culture" class="rounded-lg shadow-md w-full h-full object-cover">
+                            <img src="images/nigerian-culture.jpg" alt="Nigerian Culture" class="rounded-lg shadow-md w-full h-full object-cover">
                         </div>
                      </div>
                 </div>
@@ -380,11 +382,8 @@
                     slides[currentSlide].classList.add('active');
                 }, 7000); // Change image every 7 seconds
             }
-        });
-    </script>
-</body>
-</html>
- // Translate button logic
+
+            // Translate button logic
             const translateLink = document.getElementById('translate-link');
             if(translateLink) {
                 const currentPageUrl = window.location.href;
@@ -396,5 +395,4 @@
     </script>
 </body>
 </html>
-
 
