--- a/change-of-profession.html
+++ b/change-of-profession.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Citizens Identification | Embassy of Nigeria, Prague</title>
+    <title>Change of Profession | Embassy of Nigeria, Prague</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -126,7 +126,7 @@
         <!-- Page Title Header -->
         <section class="bg-gray-200 py-12">
             <div class="container mx-auto px-6">
-                <h1 class="text-4xl font-bold font-heading text-gray-800">Citizens Identification</h1>
+                <h1 class="text-4xl font-bold font-heading text-gray-800">Change of Profession</h1>
             </div>
         </section>
 
@@ -136,23 +136,22 @@
                 <div class="container mx-auto px-6">
                     <div class="bg-white p-8 md:p-12 rounded-lg shadow-lg card-3d-effect">
                         <div class="prose max-w-none text-gray-700 space-y-6">
-                            <p>The Embassy provides services related to the official identification of Nigerian citizens residing in the Czech Republic. This includes the registration of citizens, issuance of consular identification cards, and assistance with National Identification Number (NIN) registration processes.</p>
+                            <p>Nigerian citizens who wish to update the profession listed in their Nigerian passport can apply for this service through the Embassy. This is an important step to ensure your official documents accurately reflect your current professional status.</p>
                             
-                            <h2 class="font-heading text-2xl nigeria-green">Consular Identification Card</h2>
-                            <p>A Consular ID Card is an official document issued by the Embassy that identifies the holder as a Nigerian citizen resident in the Czech Republic. It is a useful form of local identification. Please note that this is not a substitute for a Nigerian passport or a national ID card.</p>
-
-                            <h2 class="font-heading text-2xl nigeria-green">Requirements for Consular ID</h2>
+                            <h2 class="font-heading text-2xl nigeria-green">Requirements for Change of Profession</h2>
+                            <p>To process a change of profession, applicants must provide the following documents:</p>
                              <ul class="list-disc list-inside space-y-2">
-                                <li>Completed application form.</li>
-                                <li>Original and photocopy of a valid Nigerian Passport.</li>
-                                <li>Proof of legal residency in the Czech Republic (residence permit).</li>
+                                <li>A formal letter of application addressed to the Head of Mission.</li>
+                                <li>Original and photocopy of the applicant's current Nigerian Passport (data page).</li>
+                                <li>Original and photocopy of credentials, certificates, or professional qualifications for the new profession (e.g., degree certificate, professional license).</li>
+                                <li>Proof of legal residency in the Czech Republic.</li>
                                 <li>Two recent passport-sized photographs.</li>
-                                <li>Proof of payment of applicable fees.</li>
+                                <li>Proof of payment of the applicable processing fee.</li>
                             </ul>
                             
-                            <h2 class="font-heading text-2xl nigeria-green">National Identification Number (NIN)</h2>
-                            <p>The Embassy facilitates the registration for the National Identification Number (NIN) for Nigerians in the diaspora. The NIN is a mandatory unique identifier for all Nigerian citizens. We provide guidance and support for the enrollment process, which is conducted by accredited agents.</p>
-                            <p>Please <a href="contact.html" class="text-blue-600 hover:underline">contact the Consular Section</a> for more information on NIN enrollment dates and procedures.</p>
+                            <h2 class="font-heading text-2xl nigeria-green">Application Process</h2>
+                            <p>Applications must be submitted in person at the Consular Section during official hours. The Embassy will verify the authenticity of the provided documents. Once approved, the change will be officially endorsed in the applicant's passport.</p>
+                            <p>Please note that processing times may vary. Applicants are advised to apply well in advance of any need for the updated passport.</p>
                         </div>
                     </div>
                 </div>
