--- a/contact.html
+++ b/contact.html
@@ -35,9 +35,40 @@
             transform: translateY(-8px) perspective(1000px) rotateY(-3deg);
             box-shadow: 0 25px 40px -15px rgba(0,0,0,0.2);
         }
+        .translate-button {
+            position: fixed;
+            top: 180px; 
+            right: 20px;
+            z-index: 1000;
+            background-color: white;
+            color: #333;
+            padding: 10px 15px;
+            border-radius: 50px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+            display: flex;
+            align-items: center;
+            text-decoration: none;
+            font-size: 14px;
+            font-weight: 600;
+            transition: transform 0.3s ease;
+        }
+        .translate-button:hover {
+            transform: scale(1.05);
+        }
+        .translate-button img {
+            width: 24px;
+            height: 24px;
+            margin-right: 8px;
+        }
     </style>
 </head>
 <body class="bg-gray-100">
+
+    <!-- Translate Button -->
+     <a href="#" id="translate-link" class="translate-button" title="Translate to Czech">
+        <img src="https://flagcdn.com/w40/cz.png" alt="Czech Flag">
+        <span>Česky</span>
+    </a>
 
     <!-- Header -->
     <header class="bg-white shadow-md sticky top-0 w-full z-10">
@@ -178,7 +209,7 @@
     
     <script>
         document.addEventListener('DOMContentLoaded', function () {
-            // Desktop dropdowns
+            // JS for menus and translation
             const dropdownToggles = document.querySelectorAll('.dropdown-toggle');
             dropdownToggles.forEach(toggle => {
                 toggle.addEventListener('click', function(event) {
@@ -189,8 +220,6 @@
                 });
             });
             window.addEventListener('click', () => document.querySelectorAll('.dropdown-content').forEach(d => d.style.display = 'none'));
-
-            // Mobile menu
             const mobileMenuButton = document.getElementById('mobile-menu-button');
             const mobileMenu = document.getElementById('mobile-menu');
             const navHtml = document.querySelector('.hidden.lg\\:flex').innerHTML;
@@ -207,6 +236,13 @@
                     });
                 }
             });
+            const translateLink = document.getElementById('translate-link');
+            if(translateLink) {
+                const currentPageUrl = window.location.href;
+                const googleTranslateUrl = `https://translate.google.com/translate?sl=en&tl=cs&u=${encodeURIComponent(currentPageUrl)}`;
+                translateLink.href = googleTranslateUrl;
+                translateLink.target = '_blank';
+            }
         });
     </script>
 </body>
